--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 APP_ID=299459
+WEBHOOK_PROXY_URL=https://smee.io/ibAeQ7GL9n6k90yF
 WEBHOOK_SECRET=4c9b34406649db89c560d8580e604fcf566cace3
 PRIVATE_KEY_PATH=.data/private-key.pem
 NODE_ENV=production
